# ugba-template

./: .gitignore  .gitmodules  CMakeLists.txt  assets.sh  readme.rst
gba/: CMakeLists.txt
graphics/: convert.sh
sdl2/: CMakeLists.txt
source/: template.c
tools/: CMakeLists.txt
